--- a/Ajax Type Ahead/src/style.css
+++ b/Ajax Type Ahead/src/style.css
@@ -67,10 +67,10 @@ input.search {
   background: linear-gradient(to top, #ffffff 0%, #efefef 100%);
 }
 
-/* span.population {
-  font-size: 15px;
-}
-
 .hl {
   background: #ffc600;
-} */
+}
+
+span.population {
+  font-size: 15px;
+}
